@@ -8,6 +8,8 @@ Version 0.3.10 (2007-?-?)
 - Added win32/winutil.h to tarball - fixes bug #1629945
 - Fixed presentation of --enable-debug in configure script
 - Added twolame_encode_buffer_float32_interleaved()
+- Fixed twolame_set_mode() to accept TWOLAME_AUTO_MODE
+
 
 
 Version 0.3.9 (2006-12-31)
